# qr-code-scanner

scanner/: pubspec.yaml
scanner/android/app/: build.gradle
scanner/ios/Runner/: Info.plist
scanner/lib/: main.dart  mainv2.dart  text_display.dart
scanner/libs/: CMakeLists.txt  api.cpp  api_gmp.cpp
scanner/linux/: CMakeLists.txt
scanner/linux/libs/: CMakeLists.txt
